# platform-ssot

./: .claudeignore  .gitignore  AGENT-CODEX.ai.md  AGENT-CODEX.backend.md  AGENT-CODEX.core.md  AGENT-CODEX.data.md  AGENT-CODEX.docs.md  AGENT-CODEX.mobile.md  AGENT-CODEX.web.md  AGENTS.md  CLAUDE.md  NUMARALANDIRMA-STANDARDI.md  fullstack.code-workspace
.claude/: launch.json  settings.json
.codex/: config.toml
.gemini/: settings.json
.github/: CODEOWNERS
autonomous-pipeline-v2/: README.md  registry.v1.json
backend/: .env.example  (+9 more)
tools/schema-explorer/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
tools/schema-explorer/extractor/: __init__.py  extract.py
tools/schema-explorer/extractor/analysis/: dead_tables.py  impact.py  index_hints.py  schema_diff.py
tools/schema-explorer/extractor/clustering/: domain_detect.py
tools/schema-explorer/extractor/connectors/: base.py  mssql.py  mysql.py  postgres.py
tools/schema-explorer/extractor/discovery/: alias_patterns.py  common_fks.py  confidence.py  cross_schema.py  data_overlap.py  name_match.py  view_parser.py
tools/schema-explorer/frontend/: index.html  package-lock.json  package.json  vite.config.js
tools/schema-explorer/frontend/.claude/: launch.json
tools/schema-explorer/frontend/public/data/: schema_snapshot.json
tools/schema-explorer/frontend/src/components/: App.jsx  GraphView.jsx  SearchPanel.jsx  Sidebar.jsx  TableDetail.jsx
tools/schema-explorer/frontend/src/styles/: theme.css
tools/schema-explorer/tests/: conftest.py  test_analysis.py  test_clustering.py  test_discovery.py
(+6704 files in other folders)
