[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schemalens"
version = "0.1.0"
description = "Schema explorer for legacy databases with zero FK constraints — discovers relationships, visualizes ER diagrams, generates documentation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SchemaLens Contributors"}
]
keywords = ["database", "schema", "explorer", "ER-diagram", "foreign-key", "discovery", "legacy", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
all = ["psycopg2-binary>=2.9"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
schemalens = "extractor.extract:main"

[project.urls]
Homepage = "https://github.com/schemalens/schemalens"
Repository = "https://github.com/schemalens/schemalens"
Issues = "https://github.com/schemalens/schemalens/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["extractor*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
